--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
