--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --env-file=.env index.js",
-    "build": "echo 'No build required'"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
